Add flatpak manifest

--- a/data/com.github.akiraux.akira.desktop.in
+++ b/data/com.github.akiraux.akira.desktop.in
@@ -3,8 +3,8 @@ Name=Akira
 GenericName=Akira App
 Comment=The Linux Design Tool
 Categories=Utility;Graphics;
-Exec=com.github.alecaddd.akira
-Icon=com.github.alecaddd.akira
+Exec=com.github.akiraux.akira
+Icon=com.github.akiraux.akira
 Terminal=false
 Type=Application
 X-GNOME-Gettext-Domain=akira
