--- a/data/com.github.akiraux.akira.appdata.xml.in
+++ b/data/com.github.akiraux.akira.appdata.xml.in
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Copyright (c) 2017 Alessandro Castellani (https://github.com/Alecaddd/akira) -->
-<component type="desktop">
-  <id>com.github.alecaddd.akira.desktop</id>
+<!-- Copyright (c) 2017 Alessandro Castellani (https://github.com/akiraux/akira) -->
+<component type="desktop-application">
+  <id>com.github.akiraux.akira</id>
   <metadata_license>CC0-1.0</metadata_license>
   <project_license>GPL-3.0+</project_license>
   <name>Akira</name>
@@ -23,7 +23,7 @@
     </ul>
   </description>
   <provides>
-    <binary>com.github.alecaddd.akira</binary>
+    <binary>com.github.akiraux.akira</binary>
   </provides>
   <releases>
     <release version="0.1.0" date="2018-6-01">
@@ -39,22 +39,22 @@
   </releases>
   <screenshots>
     <screenshot type="default">
-      <image>https://raw.githubusercontent.com/Alecaddd/akira/master/akira-screenshot.png</image>
+      <image>https://raw.githubusercontent.com/akiraux/akira/master/akira-screenshot.png</image>
     </screenshot>
     <screenshot>
-      <image>https://raw.githubusercontent.com/Alecaddd/akira/master/akira-screenshot1.png</image>
+      <image>https://raw.githubusercontent.com/akiraux/akira/master/akira-screenshot1.png</image>
     </screenshot>
     <screenshot>
-      <image>https://raw.githubusercontent.com/Alecaddd/akira/master/akira-screenshot2.png</image>
+      <image>https://raw.githubusercontent.com/akiraux/akira/master/akira-screenshot2.png</image>
     </screenshot>
     <screenshot>
-      <image>https://raw.githubusercontent.com/Alecaddd/akira/master/akira-screenshot3.png</image>
+      <image>https://raw.githubusercontent.com/akiraux/akira/master/akira-screenshot3.png</image>
     </screenshot>
   </screenshots>
   <developer_name>Alessandro Castellani</developer_name>
-  <url type="homepage">https://github.com/Alecaddd/akira</url>
-  <url type="bugtracker">https://github.com/Alecaddd/akira/issues</url>
-  <url type="help">https://github.com/Alecaddd/akira/issues</url>
+  <url type="homepage">https://github.com/akiraux/akira</url>
+  <url type="bugtracker">https://github.com/akiraux/akira/issues</url>
+  <url type="help">https://github.com/akiraux/akira/issues</url>
   <update_contact>castellani.ale@gmail.com</update_contact>
   <content_rating type="oars-1.1">
     <content_attribute id="violence-cartoon">none</content_attribute>
